[workspace]
resolver = "2"
members = [
    "cim-server",
    "cim-client",
    "cim-pim",
    "examples",
    "cim-connect",
    "cim-storage",
    "cim-slo",
    "cim",
    "cim-uid",
    "cim-macros", "cim-watch",
]
default-members = ["cim-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
askama = { version = "0.12" }
jsonwebkey = { version = "0.3", features = ["generate", "jwt-convert"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0", features = ["backtrace"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
mockall = "0.12"
async-trait = "0.1"
axum = { version = "0.7.4", features = ["tracing"] }
futures = "0.3 "

[profile.release]
codegen-units = 16
debug = true
lto = true

[profile.bench]
debug = true

[workspace.lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
clone_on_ref_ptr = "deny"
future_not_send = "deny"


[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
