[workspace]
resolver = "2"
members = [
  "cim-server",
  "cim-client",
  "cim-pim",
  "examples",
  "cim-storage",
  "cim-slo",
  "cim",
  "cim-macros",
  "cim-watch",
  "cim-job",
  "cim-operator",
]
default-members = ["cim-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
askama = { version = "0.12" }
jsonwebkey = { version = "0.3", features = ["generate", "jwt-convert"] }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0", features = ["backtrace"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"
mockall = "0.13"
async-trait = "0.1"
axum = { version = "0.8", features = ["tracing", "ws"] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
futures = "0.3 "
sqlx = { version = "0.8", features = [
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
] }
http = "1.1"
lru = "0.13"
rand = "0.9"
toml = "0.8"
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }

[profile.release]
codegen-units = 16
debug = true
lto = true

[profile.bench]
debug = true

[workspace.lints.rust]
unreachable_pub = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
clone_on_ref_ptr = "deny"
future_not_send = "deny"
