[package]
name = "cim-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
thiserror = "1"
anyhow = "1"
http = "0.2"
mime = "0.3"
tracing = "0.1"
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
