[package]
name = "cim-operator"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { version = "1.45", features = ["full"] }
k8s-openapi = { version = "0.25", default-features = false }
kube = { version = "1.1" }


[lints]
workspace = true
