[package]
name = "cim-pim"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
utoipa = { workspace = true }

cidr-utils = "0.6"
