[package]
name = "cim-server"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = true

[[bin]]
name = "server"
path = "src/bin/main.rs"

[dependencies]
cim-pim = { path = "../cim-pim" }
cim-storage = { path = "../cim-storage" }
cim-watch = { path = "../cim-watch" }
cim-slo = { path = "../cim-slo", features = ["axum-resp"] }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
mockall = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
jsonwebkey = { workspace = true }
askama = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
lru = { workspace = true }
toml = { workspace = true }

tokio = { version = "1.36", features = ["full"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4"
base64 = "0.22"
jsonwebtoken = "9.2"
sha2 = "0.10"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
rsa = { version = "0.9" }
constant_time_eq = { version = "0.3.0" }
serde_urlencoded = { version = "0.7" }
async-stream = { version = "0.3" }
bytes = { version = "1.7" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.6", package = "tikv-jemallocator" }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1", default-features = false }
