[package]
name = "cim-storage"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cim-slo = { path = "../cim-slo" }
cim-pim = { path = "../cim-pim" }
cim-watch = { path = "../cim-watch" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonwebkey = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }

utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
