[package]
name = "cim-uid"
version.workspace = true
edition.workspace = true

description = "define uid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.cim-macros]
path = "../cim-macros"
optional = true

[features]
derive = ["cim-macros"]
