[package]
name = "cim"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/crochee/cim/compare/{{tag_name}}...HEAD", exactly = 1 },
    { file = "CITATION.cff", search = "^date-released: ....-..-..", replace = "date-released: {{date}}" },
    { file = "CITATION.cff", search = "^version: .+\\..+\\..+", replace = "version: {{version}}" },
    { file = "src/lib.rs", search = "blob/v.+\\..+\\..+/CHANGELOG.md", replace = "blob/v{{version}}/CHANGELOG.md", exactly = 1 },
]

[dependencies]
