[package]
name = "cim-examples"
publish = false
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[dev-dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
cim = { path = "../cim", features = ["derive"] }

[[example]]
name = "pim"
path = "pim.rs"

[[example]]
name = "macros"
path = "macros.rs"

[[example]]
name = "watch"
path = "watch.rs"
