[package]
name = "cims"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = true

[[bin]]
name = "server"
path = "src/bin/main.rs"

[dependencies]
component = { path = "../component" }

dotenv = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
mockall = { workspace = true }
async-trait = { workspace = true }

tokio = { version = "1.35", features = ["full"] }
backtrace = "0.3"
mime = "0.3"
sonyflake = "0.2"
thiserror = "1.0"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "1.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = { version = "=0.13.3", default-features = false }
lazy_static = "1.4"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
serde_urlencoded = "0.7"
lru = "0.12"
rust-argon2 = "2.0"
rand = "0.8"
askama = "0.12"
oauth2 = "4.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
base64 = "0.21"
jsonwebtoken = "9.2"
sha2 = "0.10"

mimalloc = { version = "0.1", default-features = false, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", package = "tikv-jemallocator", optional = true }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
