[package]
name = "server"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = true

[[bin]]
name = "server"
path = "src/bin/main.rs"

[dependencies]
pim = { path = "../pim" }
storage = { path = "../storage" }
slo = { path = "../slo", features = ["axum-resp"] }

dotenv = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
mockall = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
jsonwebkey = { workspace = true }
askama = { workspace = true }

tokio = { version = "1.35", features = ["full"] }
backtrace = "0.3"
mime = "0.3"
sonyflake = "0.2"
thiserror = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "1.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
prometheus = { version = "=0.13.3", default-features = false }
lazy_static = "1.4"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
serde_urlencoded = "0.7"
lru = "0.12"
rust-argon2 = "2.0"
rand = "0.8"
oauth2 = "4.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
base64 = "0.22"
jsonwebtoken = "9.2"
sha2 = "0.10"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
mimalloc = { version = "0.1", default-features = false, optional = true }
openidconnect = "3.5.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", package = "tikv-jemallocator", optional = true }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
