[package]
name = "iam-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cim-core = { path = "../../cim-core" }

tokio = { version = "1.24", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
validator = { version = "0.16", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "cors", "fs"] }
uuid = { version = "1.2", features = ["v4"] }
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
lazy_static = "1.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive", "env"] }
sqlx = { version = "0.6", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "offline",
] }
regex = "1.7"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.9"
cidr-utils = "0.5"
mockall = "0.11"
rust-argon2 = "1.0"
rand = "0.8"
askama = "0.11"
oauth2 = "4.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
base64 = "0.21"
